--- a/src/Plugins/Shipping.ByWeight/Localization/resources.de-de.xml
+++ b/src/Plugins/Shipping.ByWeight/Localization/resources.de-de.xml
@@ -6,60 +6,67 @@
     <Value>Land</Value>
   </LocaleResource>
   <LocaleResource Name="Fields.Country.Hint">
-    <Value>Bei Angabe eines Asterisks steht diese Versandart allen Kunden, ungeachtet des Landes, zur Verfügung.</Value>
+    <Value>Das Bestimmungsland. Wählen Sie Stern (*), wenn das Land des Kunden bei der Auswertung keine Rolle spielen soll.</Value>
   </LocaleResource>
   <LocaleResource Name="Fields.ShippingMethod">
     <Value>Versandart</Value>
   </LocaleResource>
   <LocaleResource Name="Fields.ShippingMethod.Hint">
-    <Value>Die Versandart.</Value>
+    <Value>Die Versandart, bei der diese Berechnungsmethode angewandt werden soll.</Value>
   </LocaleResource>
   <LocaleResource Name="Fields.From">
-    <Value>Auftragsgewicht ab</Value>
+    <Value>Warengewicht von</Value>
   </LocaleResource>
   <LocaleResource Name="Fields.From.Hint">
-    <Value>Auftragsgewicht ab.</Value>
+    <Value>Die Bedingung trifft zu, wenn das Gesamtgewicht aller Positionen im Warenkorb mind. diesen Wert aufweist.</Value>
   </LocaleResource>
   <LocaleResource Name="Fields.To">
-    <Value>Auftragsgewicht bis zu</Value>
+    <Value>Warengewicht bis</Value>
   </LocaleResource>
   <LocaleResource Name="Fields.To.Hint">
-    <Value>Auftragsgewicht bis zu.</Value>
+    <Value>Die Bedingung trifft zu, wenn das Gesamtgewicht aller Positionen im Warenkorb kleiner als dieser Wert ist. Lassen Sie das Feld leer, wenn Sie keine Obergrenze festlegen möchten.</Value>
   </LocaleResource>
   <LocaleResource Name="Fields.UsePercentage">
-    <Value>Berechne nach Prozentsatz</Value>
+    <Value>Prozentual</Value>
   </LocaleResource>
   <LocaleResource Name="Fields.UsePercentage.Hint">
-    <Value>Aktivieren Sie diese Option für die Berechnung nach einem Prozentsatz.</Value>
+    <Value>Legt fest, ob die Versandgebühr prozentual vom Warenwert (NICHT Gewicht) berechnet werden soll.</Value>
   </LocaleResource>
   <LocaleResource Name="Fields.ShippingChargePercentage">
-    <Value>Prozentsatz (der Zwischensumme)</Value>
+    <Value>Gebühr %</Value>
   </LocaleResource>
   <LocaleResource Name="Fields.ShippingChargePercentage.Hint">
-    <Value>Prozentsatz (der Zwischensumme).</Value>
+    <Value>Prozentsatz für die Gebühr auf den Warenwert.</Value>
   </LocaleResource>
   <LocaleResource Name="Fields.ShippingChargeAmount">
-    <Value>Fester Betrag</Value>
+    <Value>Gebühr</Value>
   </LocaleResource>
   <LocaleResource Name="Fields.ShippingChargeAmount.Hint">
-    <Value>Fester Betrag.</Value>
+    <Value>Die Versandgebühr als absoluter Betrag ODER Berechnungsfaktor, sofern die entspr. Option aktiviert wurde.</Value>
   </LocaleResource>
   <LocaleResource Name="Fields.LimitMethodsToCreated">
-    <Value>Beschränke die Versandarten auf die hier konfigurierten</Value>
+    <Value>Kein 'Fallback' anbieten</Value>
   </LocaleResource>
   <LocaleResource Name="Fields.LimitMethodsToCreated.Hint">
-    <Value>Wenn diese Option aktiv ist, wird die Anzeige der Versandarten auf die hier konfigurierten beschränkt. Anderfalls ist es möglich, jede verfügbare Versandart zu wählen auch wenn diese nicht hier konfiguriert sind (keine Versandart-Gebühren in diesem Fall)</Value>
+    <Value>Dem Kunden wird während des Checkouts kostenloser Versand als Fallback angeboten, wenn keine der festgelegten Bedingungen zutreffen. Aktivieren Sie diese Option, wenn das nicht gewünscht ist.</Value>
   </LocaleResource>
   <LocaleResource Name="Fields.CalculatePerWeightUnit">
-    <Value>Berechnung nach Gewichtseinheiten</Value>
+    <Value>Gebühr mit Gewicht multiplizieren</Value>
   </LocaleResource>
   <LocaleResource Name="Fields.CalculatePerWeightUnit.Hint">
-    <Value>Wenn diese Option aktiv ist, werden Raten mit der Gewichtseinheit multipliziert (g, kg, etc). Diese Option wird bei festen Raten (ohne prozentuale Berechnung) angewendet.</Value>
+    <Value>Legt fest, ob die Gebühr mit dem Gesamt-Warengewicht multipliziert werden soll. Diese Option wird ignoriert, wenn eine prozentuale Gebühr erhoben wird.</Value>
   </LocaleResource>
   <LocaleResource Name="Fields.Store">
     <Value>Shop</Value>
   </LocaleResource>
   <LocaleResource Name="Fields.Store.Hint">
     <Value>Wird das Sternchen ausgewählt, so wird die Rate auf alle Shops angewandt.</Value>
+  </LocaleResource>
+
+  <LocaleResource Name="AddNewRecordTitle">
+    <Value>Neue Versandbedingung hinzufügen</Value>
+  </LocaleResource>
+  <LocaleResource Name="SettingsTitle">
+    <Value>Optionen</Value>
   </LocaleResource>
 </Language>
