Resolved #34: (ShippingByTotal) added the ability to define zip ranges including wildcards.

--- a/src/Plugins/Shipping.ByTotal/Localization/resources.de-de.xml
+++ b/src/Plugins/Shipping.ByTotal/Localization/resources.de-de.xml
@@ -22,10 +22,10 @@
     <Value>Bundesland/Region/Kanton des Kunden. Wählen Sie Stern (*), wenn die Gebühr unabhängig von Region für alle Kunden im definierten Land gelten soll.</Value>
   </LocaleResource>
   <LocaleResource Name="Fields.Zip">
-    <Value>PLZ</Value>
+    <Value>PLZ-(Bereich)</Value>
   </LocaleResource>
   <LocaleResource Name="Fields.Zip.Hint">
-    <Value>PLZ des Kunden. Lassen Sie das Feld leer, wenn die Gebühr unabhängig von PLZ für alle Kunden im definierten (Bundes)land gelten soll.</Value>
+    <Value>PLZ-(Bereich) des Kunden, entweder als spezifischer Wert oder als Muster (z.B. 4000-49999 für das PLZ-Gebiet 4). In einem Muster lassen sich auch Wildcards verwenden, wie Stern (*) oder Fragezeichen (?). Lassen Sie das Feld leer, wenn die Gebühr unabhängig von PLZ für alle Kunden im definierten (Bundes)land gelten soll.</Value>
   </LocaleResource>
   <LocaleResource Name="Fields.ShippingMethod">
     <Value>Versandart</Value>
