--- a/src/Plugins/Shipping.ByTotal/Localization/resources.en-us.xml
+++ b/src/Plugins/Shipping.ByTotal/Localization/resources.en-us.xml
@@ -22,10 +22,10 @@
     <Value>If an asterisk is selected, then this shipping rate will apply to all customers from the given country, regardless of the state / province.</Value>
   </LocaleResource>
   <LocaleResource Name="Fields.Zip">
-    <Value>Zip</Value>
+    <Value>Zip-(Range)</Value>
   </LocaleResource>
   <LocaleResource Name="Fields.Zip.Hint">
-    <Value>Zip / postal code. If zip is empty, then this shipping rate will apply to all customers from the given country or state / province, regardless of the zip code.</Value>
+    <Value>Zip/postal code (range), either as specific value or range pattern (e.g. 4000-4999). You can also define wildcard chars like * or ?. If zip is empty, then this shipping rate will apply to all customers from the given country or state / province, regardless of the zip code.</Value>
   </LocaleResource>
   <LocaleResource Name="Fields.ShippingMethod">
     <Value>Shipping method</Value>
